--- a/src/css/components/_challengeList.css
+++ b/src/css/components/_challengeList.css
@@ -28,8 +28,8 @@
 }
 
 
-@media $medium-to-large,
-screen and (min-width: 1624px) and (max-width: 2129px) {
+@media screen and (min-width: 1080px) and (max-width: 1199px),
+screen and (min-width: 1890px) and (max-width: 2434px) {
   .challenge-list {
     grid-template-columns: repeat(2, 50%);
     grid-auto-rows: 1fr;
